--- a/src/alfred/app/views/person/_profile_card.erb
+++ b/src/alfred/app/views/person/_profile_card.erb
@@ -6,4 +6,12 @@
   </div>
   <h1>Rodrigo Pérez</h1>
   <h2>Software Developer</h2>
+  <ul id="skills">
+    <li><%= image_tag "skills/angular.png" %></li>
+    <li><%= image_tag "skills/css3.png" %></li>
+    <li><%= image_tag "skills/html5.png" %></li>
+    <li><%= image_tag "skills/javascript.png" %></li>
+    <li><%= image_tag "skills/java.png" %></li>
+    <li><%= image_tag "skills/jquery.png" %></li>
+  </ul>
 </div>
