--- a/src/alfred/app/views/person/index.html.erb
+++ b/src/alfred/app/views/person/index.html.erb
@@ -5,9 +5,7 @@
       <%= render 'person/stats_card' %>
     </div>
     <div class="card-col col-lg-5">
-      <div class="card events">
-        <h1>Eventos</h1>
-      </div>
+      <%= render 'person/events_card' %>
       <div class="card pending">
         <h1>Hitos pendientes</h1>
       </div>
