--- a/src/alfred/app/views/people/index.html.erb
+++ b/src/alfred/app/views/people/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row">
     <div class="card-col col-xs-2">
-      <%= render 'person/profile_card' %>
-      <%= render 'person/stats_card' %>
+      <%= render 'people/profile_card' %>
+      <%= render 'people/stats_card' %>
     </div>
     <div class="card-col col-lg-5">
       <div class="card events">
