--- a/src/alfred/app/views/welcome/index.html.erb
+++ b/src/alfred/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
 
 <% if current_user %>
     Signed in as <strong><%= current_user.person.name %></strong>!
-    <%= link_to "Sign out", 'google/signout', id: "sign_out" %>
+    <%= link_to "Sign out", :controller => 'google', :action => 'signout', id: "sign_out" %>
 <% else %>
     <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
 <% end %>
