--- a/src/alfred/app/views/person/_events_card.erb
+++ b/src/alfred/app/views/person/_events_card.erb
@@ -2,7 +2,7 @@
   <h1>Eventos</h1>
   <div class="separator"><div>Esta semana</div></div>
   <ul>
-    <li>
+    <li class="clearfix">
       <div class="day">16</div>
       <div class="day-of-the-week">Mie</div>
       <div class="content">
@@ -14,4 +14,26 @@
     </li>
   </ul>
   <div class="separator"><div>Semana próxima</div></div>
+  <ul>
+    <li class="clearfix">
+      <div class="day">16</div>
+      <div class="day-of-the-week">Mie</div>
+      <div class="content">
+        <div class="month-and-year">Septiembre 2015</div>
+        <h2>Feedback semestral</h2>
+        <p>Reunión de relevamiento de requisitos
+          para nuevo proyecto con el cliente XYZ S.A.</p>
+      </div>
+    </li>
+    <li class="clearfix">
+      <div class="day">16</div>
+      <div class="day-of-the-week">Mie</div>
+      <div class="content">
+        <div class="month-and-year">Septiembre 2015</div>
+        <h2>Feedback semestral</h2>
+        <p>Reunión de relevamiento de requisitos
+          para nuevo proyecto con el cliente XYZ S.A.</p>
+      </div>
+    </li>
+  </ul>
 </div>
