Chequeo existencia de Nombre y mail, y formato de mail

--- a/src/alfred/app/views/people/new.html.erb
+++ b/src/alfred/app/views/people/new.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="field">
       <%= f.label :email1 %><br>
-      <%= f.text_field :email1 %>
+      <%= f.text_field :email %>
     </div>
     <div class="field">
       <%= f.label :celphone %><br>
@@ -16,24 +16,16 @@
       <%= f.text_field :phone %>
     </div>
     <div class="field">
-      <%= f.label :birthDate %><br>
-      <%= f.text_field :birthDate %>
+      <%= f.label :birth_date %><br>
+      <%= f.text_field :birth_date %>
     </div>
     <div class="field">
-      <%= f.label :initDate %><br>
-      <%= f.text_field :initDate %>
+      <%= f.label :init_date %><br>
+      <%= f.text_field :init_date %>
     </div>
     <div class="field">
-      <%= f.label :sex %><br>
-      <%= f.text_field :sex %>
-    </div>
-    <div class="field">
-      <%= f.label :finishDate %><br>
-      <%= f.text_field :finishDate %>
-    </div>
-    <div class="field">
-      <%= f.label :techRol %><br>
-      <%= f.text_field :techRol %>
+      <%= f.label :finish_date %><br>
+      <%= f.text_field :finish_date %>
     </div>
     <div class="actions">
       <%= f.submit %>
