--- a/src/alfred/app/views/person/index.html.erb
+++ b/src/alfred/app/views/person/index.html.erb
@@ -11,9 +11,7 @@
       </div>
     </div>
     <div class="card-col col-xs-5 col-sm-5 col-md-5 col-lg-5">
-      <div class="card timeline">
-
-      </div>
+      <%= render 'person/timeline_card' %>
     </div>
   </div>
 </div>
