--- a/src/alfred/app/assets/stylesheets/application.scss.erb
+++ b/src/alfred/app/assets/stylesheets/application.scss.erb
@@ -19,9 +19,11 @@ $midnightblue-dark:#23323D;
 $nav-background: $midnightblue;
 $nav-hover: $peterriver;
 
+body {
+  background-color: #F4F4F4;
+}
+
 @import "navigation";
-
-
 
 .card-col {
   padding-left: 8px;
@@ -30,14 +32,14 @@ $nav-hover: $peterriver;
 
 .card {
   width: 100%;
-  padding: 1em;
+  padding: 14px;
   margin: 0 0 15px 0em;
-  border-bottom: solid 5px;
+  border-bottom: solid 5px transparent;
 
   color: white;
   text-align: center;
 
-  h1 {
+  > h1 {
     font-size: 18px;
     text-transform: uppercase;
     margin-top: 5px;
@@ -70,8 +72,8 @@ $nav-hover: $peterriver;
   }
 
   &.card.timeline {
-    background-color: $alizarin;
-    border-color: $alizarin-dark;
+    //background-color: $alizarin;
+    //border-color: $alizarin-dark;
     min-height: 40em;
   }
 
@@ -82,7 +84,6 @@ $nav-hover: $peterriver;
   h1 {
     margin-top: 0;
     font-size: 20px;
-    text-transform: none;
   }
   h2 {
     margin-top: 0px;
@@ -122,6 +123,15 @@ ul#skills {
     img {
       border-radius: 50%;
       width: 100%;
+
+
+      @include transition(0.3s ease-in-out);
+
+      &:hover {
+        @include scale(1.1);
+        @include transition(0.3s ease-in-out);
+      }
+
     }
   }
 
@@ -222,7 +232,7 @@ ul#skills {
         border-left: $mooveit-orange solid 2px;
         float: left;
         width: calc(100% - 40px);
-        padding: 0 10px 0 20px;
+        padding: 0 15px 0 20px;
         font-size: 14px;
       }
 
@@ -250,5 +260,152 @@ ul#skills {
 
 
     }
+  }
+}
+
+#timeline-card {
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 30px;
+    width: 4px;
+    background-color: $alizarin;
+    border-radius: 2px;
+  }
+
+}
+
+@mixin triangle($direction, $color: currentcolor, $size: 30px) {
+
+  width: 0;
+  height: 0;
+
+  border-style: solid;
+  border-color: transparent;
+  border-width: $size / 2;
+  border-#{opposite_position($direction)}-color: $color;
+}
+
+ul#milestone-list {
+
+  padding-left: 40px;
+
+  > li {
+
+    position: relative;
+    border-radius: 10px;
+    text-align: left;
+    background-color: white;
+    list-style-type: none;
+    padding: 20px 10px 20px 15px;
+    color: black;
+
+    margin: 10px;
+
+    @include transition(0.3s ease-in-out);
+
+    &:hover {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      @include box-shadow(1px 1px 3px rgba(0,0,0,0.3));
+
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 20px;
+      left: -30px;
+      @include triangle(left, white);
+      clear: both;
+    }
+    
+    &:after {
+      content: '';
+      position: absolute;
+      top: 16px;
+      left: -60px;
+      width: 42px;
+      height: 42px;
+      background-image: url('<%= asset_path 'assets/layouts/calendar-white.png' %>');
+      background-size: 60%;
+      background-repeat: no-repeat;
+      background-position: 50%;
+      border-radius: 50%;
+      border: 6px #F4F4F4 solid;
+      background-color: $alizarin;
+    }
+
+    h2 {
+      margin: 0 0 10px 0;
+      font-size: 18px;
+    }
+
+    p {
+      padding-left: 15px;
+    }
+
+    .calendar {
+      background-image: url('<%= asset_path 'assets/layouts/calendar-red.png' %>');
+      background-repeat: no-repeat;
+      background-size: 24px 24px;
+      min-height: 24px;
+      float: left;
+      margin-left: 15px;
+      line-height: 24px;
+      padding-left: 30px;
+      font-weight: bold;
+      font-size: 10px;;
+    }
+
+    ul.tags {
+      float: right;
+      margin-right: 15px;
+    }
+
+    $tag-height: 20px;
+
+    li {
+      position: relative;
+      float: right;
+      background-color: #E862E5;
+      font-size: 10px;
+      list-style: none;
+      line-height: $tag-height;
+      height: $tag-height;
+      padding: 0 10px;
+      color: white;
+      font-weight: bold;
+      margin-top: 4px;
+      
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        left: -$tag-height;
+        @include triangle(left, #E862E5, $tag-height);
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        left: -1px;
+        top: calc(50% - 2px);
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        background-color: white;
+      }
+
+
+    }
+
   }
 }
