--- a/src/alfred/app/views/people/index.html.erb
+++ b/src/alfred/app/views/people/index.html.erb
@@ -1,17 +1,17 @@
 <div class="container-fluid">
   <div class="row">
     <div class="card-col col-xs-2">
-      <%= render 'person/profile_card' %>
-      <%= render 'person/stats_card' %>
+      <%= render 'people/profile_card' %>
+      <%= render 'people/stats_card' %>
     </div>
     <div class="card-col col-lg-5">
-      <%= render 'person/events_card' %>
+      <%= render 'people/events_card' %>
       <div class="card pending">
         <h1>Hitos pendientes</h1>
       </div>
     </div>
     <div class="card-col col-xs-5 col-sm-5 col-md-5 col-lg-5">
-      <%= render 'person/timeline_card' %>
+      <%= render 'people/timeline_card' %>
     </div>
   </div>
 </div>
