--- a/src/alfred/app/views/welcome/index.html.erb
+++ b/src/alfred/app/views/welcome/index.html.erb
@@ -1,11 +1,15 @@
-<h1>PIS 2015 </h1>
+<div class="container-fluid">
+    <div id="login-screen">
+      <ul id="login-top">
+        <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
+      </ul>
+      <p><%= @msj %></p>
 
-<p><%= @msj %></p>
-
-
-<% if current_user %>
-    Signed in as <strong><%= current_user.person.name %></strong>!
-    <%= link_to "Sign out", :controller => 'google', :action => 'signout', id: "sign_out" %>
-<% else %>
-    <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
-<% end %>
+      <% if current_user %>
+          Signed in as <strong><%= current_user.person.name %></strong>!
+          <%= link_to "Sign out", :controller => 'google', :action => 'signout', id: "sign_out" %>
+      <% else %>
+          <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+      <% end %>
+    </div>
+</div>
