--- a/src/alfred/app/assets/stylesheets/application.scss.erb
+++ b/src/alfred/app/assets/stylesheets/application.scss.erb
@@ -46,6 +46,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 10;
   @include translate(-50%, -50%);
 
   background-color: white;
@@ -54,20 +55,20 @@ body {
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
 
-  z-index: 1;
+    &:after {
+      box-shadow: inset 0 8px 5px -5px rgba(black, 0.5), 1px 1px 2px rgba(black, 0.5);
+      content: '';
+      position: absolute;
+      right: 50px;
+      bottom: -36px;
+      z-index: -1;
+      width: 39px;
+      height: 36px;
+      background-image: url('<%= asset_path 'assets/logos/moove-it-logo.png' %>');;
+      background-size: 40px;
+      background-repeat: no-repeat;
+    }
 
-  &:after {
-    content: '';
-    position: absolute;
-    right: 50px;
-    bottom: -40px;
-    width: 40px;
-    height: 40px;
-    background-image: url('<%= asset_path 'assets/logos/moove-it-logo.png' %>');;
-    background-size: 40px;
-    background-repeat: no-repeat;
-    z-index: -1;
-  }
 
   ul#login-top {
 
@@ -104,7 +105,11 @@ body {
     background-repeat: no-repeat;
     background-position: 10px 50%;
     background-size: 24px;
+    white-space: nowrap;
     position: relative;
+    bottom: 50px;
+    left: 100px;
+
 
     &:before {
       content: '';
@@ -115,6 +120,13 @@ body {
       border-left: 1px solid white;
     }
 
+  }
+
+  img {
+    position: relative;
+    right: 40px;
+    display: block;
+    margin: auto;
   }
 
 }
