--- a/src/alfred/app/views/welcome/index.html.erb
+++ b/src/alfred/app/views/welcome/index.html.erb
@@ -4,12 +4,12 @@
         <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
       </ul>
       <p><%= @msj %></p>
-
       <% if current_user %>
           Signed in as <strong><%= current_user.person.name %></strong>!
           <%= link_to "Sign out", :controller => 'google', :action => 'signout', id: "sign_out" %>
       <% else %>
-          <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+          <%= image_tag "logos/alfred-logo-big.png" %>
+          <%= link_to "Ingresar con Google", "/auth/google_oauth2", id: "sign_in" %>
       <% end %>
     </div>
 </div>
