Corregidos nombres de campo con db actualizada

--- a/src/alfred/app/views/people/new.html.erb
+++ b/src/alfred/app/views/people/new.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="field">
       <%= f.label t('people_new_celphone') %><br>
-      <%= f.text_field :celphone %>
+      <%= f.text_field :cellphone %>
     </div>
     <div class="field">
       <%= f.label t('people_new_telephone') %><br>
@@ -22,7 +22,7 @@
     </div>
     <div class="field">
       <%= f.label t('people_new_init_date') %><br>
-      <%= f.text_field :init_date %>
+      <%= f.text_field :start_date %>
     </div>
     <div class="btn">
       <%= f.button t('people_new_submit'), options= :type=>'button', :onclick=>'if(validate()){submit();};' %>
