--- a/src/alfred/app/views/people/_stats_card.erb
+++ b/src/alfred/app/views/people/_stats_card.erb
@@ -1,5 +1,5 @@
 <div id="stats-card"class="card stats">
-  <h1>Estadísticas</h1>
+  <!--<h1>Estadísticas</h1>
   <div class="badge-stats">
     <span>Proyectos en curso</span><span class="badge">2</span>
     <span>Proyectos realizados</span><span class="badge">19</span>
@@ -16,5 +16,12 @@
       <span class="text">CI tests aprobados</span>
     </div>
     <div class="clearfix"></div>
+  </div>-->
+
+  <h1>Estadísticas</h1>
+  <div class="badge-stats">
+    <span>Proyectos en curso</span><span class="badge"><%=@proysin%></span>
+    <span>Proyectos realizados</span><span class="badge"><%=@proysend%></span>
+    <span>Tiempo en Moove-it</span><span class="badge"><%=@timein%></span>
   </div>
 </div>
