--- a/src/alfred/app/views/people/_events_card.erb
+++ b/src/alfred/app/views/people/_events_card.erb
@@ -1,6 +1,6 @@
 <div id="events-card" class="card events">
   <h1>Eventos</h1>
-  <div class="separator"><div>Esta semana</div></div>
+  <!--<div class="separator"><div>Esta semana</div></div>
   <ul>
     <li class="clearfix">
       <div class="day">16</div>
@@ -35,5 +35,19 @@
           para nuevo proyecto con el cliente XYZ S.A.</p>
       </div>
     </li>
-  </ul>
+  </ul>-->
+
+  <% @events.each do |e| %>
+      <ul>
+        <li class="clearfix">
+          <div class="day"><%=e.due_date.day%></div>
+          <div class="day-of-the-week"><%=dayname(e.due_date)%></div>
+          <div class="content">
+            <div class="month-and-year"><%=monthname(e.due_date)%> <%=e.due_date.year%></div>
+            <h2><%=e.title%></h2>
+            <p><%=e.description%></p>
+          </div>
+        </li>
+      </ul>
+  <% end %>
 </div>
