--- a/src/alfred/app/views/people/_timeline_card.erb
+++ b/src/alfred/app/views/people/_timeline_card.erb
@@ -1,40 +1,54 @@
 <div id="timeline-card" class="card timeline">
+  <!--<ul id="milestone-list">
+    <li>
+      <h2>Advanced iOS Bootcamp</h2>
+      <p>
+        Certificación “Advanced iOS Bootcamp” de
+        BigNerdRanch.
+      </p>
+      <div class="calendar">La semana que viene</div>
+      <ul class="tags">
+        <li>Speaker</li>
+      </ul>
+      <div class="clearfix"></div>
+    </li>
+    <li>
+      <h2>Advanced iOS Bootcamp</h2>
+      <p>
+        Certificación “Advanced iOS Bootcamp” de
+        BigNerdRanch.
+      </p>
+      <div class="calendar">La semana que viene</div>
+      <ul class="tags">
+        <li>Speaker</li>
+      </ul>
+      <div class="clearfix"></div>
+    </li>
+    <li>
+      <h2>Advanced iOS Bootcamp</h2>
+      <p>
+        Certificación “Advanced iOS Bootcamp” de
+        BigNerdRanch.
+      </p>
+      <div class="calendar">La semana que viene</div>
+      <ul class="tags">
+        <li>Speaker</li>
+      </ul>
+      <div class="clearfix"></div>
+    </li>
+  </ul>-->
+
   <ul id="milestone-list">
-    <li>
-      <h2>Advanced iOS Bootcamp</h2>
-      <p>
-        Certificación “Advanced iOS Bootcamp” de
-        BigNerdRanch.
-      </p>
-      <div class="calendar">La semana que viene</div>
-      <ul class="tags">
-        <li>Speaker</li>
-      </ul>
-      <div class="clearfix"></div>
-    </li>
-    <li>
-      <h2>Advanced iOS Bootcamp</h2>
-      <p>
-        Certificación “Advanced iOS Bootcamp” de
-        BigNerdRanch.
-      </p>
-      <div class="calendar">La semana que viene</div>
-      <ul class="tags">
-        <li>Speaker</li>
-      </ul>
-      <div class="clearfix"></div>
-    </li>
-    <li>
-      <h2>Advanced iOS Bootcamp</h2>
-      <p>
-        Certificación “Advanced iOS Bootcamp” de
-        BigNerdRanch.
-      </p>
-      <div class="calendar">La semana que viene</div>
-      <ul class="tags">
-        <li>Speaker</li>
-      </ul>
-      <div class="clearfix"></div>
-    </li>
+    <% @milestones.each do |e| %>
+        <li>
+          <h2><%=e.title%></h2>
+          <p><%=e.description%></p>
+          <div class="calendar"><%=dayname(e.due_date)%> <%=e.due_date.day%> de <%=monthname(e.due_date)%> <%=e.due_date.year%></div>
+          <ul class="tags">
+            <!--<li>Speaker</li>-->
+          </ul>
+          <div class="clearfix"></div>
+        </li>
+    <% end %>
   </ul>
 </div>
