Ajustes en integración de frontend

--- a/src/alfred/app/views/people/_stats_card.erb
+++ b/src/alfred/app/views/people/_stats_card.erb
@@ -22,6 +22,6 @@
   <div class="badge-stats">
     <span>Proyectos en curso</span><span class="badge"><%=@proysin%></span>
     <span>Proyectos realizados</span><span class="badge"><%=@proysend%></span>
-    <span>Tiempo en Moove-it</span><span class="badge"><%=@timein%></span>
+    <span>Tiempo en Moove-it</span><span class="badge"><%= time_ago_in_words(@start_date) %></span>
   </div>
 </div>
