--- a/src/alfred/app/views/people/_timeline_card.erb
+++ b/src/alfred/app/views/people/_timeline_card.erb
@@ -37,13 +37,13 @@
       <div class="clearfix"></div>
     </li>
   </ul>-->
-  <% if @milestones %>
+  <% if @milestones and not @milestones.empty? %>
       <ul id="milestone-list">
         <% @milestones.each do |e| %>
             <li>
               <h2><%=e.title%></h2>
               <p><%=e.description%></p>
-              <div class="calendar"><%=dayname(e.due_date)%> <%=e.due_date.day%> de <%=monthname(e.due_date)%> <%=e.due_date.year%></div>
+              <div class="calendar"><%=e.due_date.strftime("%A, %B %d %Y") %></div>
               <ul class="tags">
                 <!--<li>Speaker</li>-->
               </ul>
