Ajustes en integración de frontend

--- a/src/alfred/app/assets/stylesheets/application.scss.erb
+++ b/src/alfred/app/assets/stylesheets/application.scss.erb
@@ -9,6 +9,8 @@ $sunflower: #F0C30F;
 $alizarin: #E64C3C;
 $midnightblue:#34495E;
 
+$lightblue : #F2F2F2;
+
 $turqoise-dark: #1ABB9B;
 $peterriver-dark: #03A5FF;
 $mooveit-orange-dark: #FC6A06;
@@ -34,3 +36,8 @@ body {
 @import "cards";
 @import "login";
 @import "milestones";
+
+#milestone-info {
+  background-color: white;
+  min-height: 10rem;
+}
