--- a/src/alfred/app/views/milestones/show.html.erb
+++ b/src/alfred/app/views/milestones/show.html.erb
@@ -1,6 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="card-col col-xs-2">
+    <div class="card-col col-xs-7">
+
+      <div id="milestone-info">
+
+      </div>
+
 
     </div>
   </div>
