--- a/src/alfred/app/views/people/show.html.erb
+++ b/src/alfred/app/views/people/show.html.erb
@@ -8,6 +8,23 @@
       <%= render 'people/events_card' %>
       <div class="card pending">
         <h1>Hitos pendientes</h1>
+        <% if @overcomes and not @overcomes.empty? %>
+            <ul id="milestone-list">
+              <% @overcomes.each do |e| %>
+                  <li>
+                    <h2><%=e.title%></h2>
+                    <p><%=e.description%></p>
+                    <div class="calendar"><%=e.due_date.strftime("%A, %B %d %Y") %></div>
+                    <ul class="tags">
+                      <!--<li>Speaker</li>-->
+                    </ul>
+                    <div class="clearfix"></div>
+                  </li>
+              <% end %>
+            </ul>
+        <% else %>
+            <p>No hay hitos que mostar</p>
+        <% end %>
       </div>
     </div>
     <div class="card-col col-xs-5 col-sm-5 col-md-5 col-lg-5">
