cambio de silueta

--- a/src/alfred/app/views/people/_profile_card.erb
+++ b/src/alfred/app/views/people/_profile_card.erb
@@ -1,7 +1,7 @@
 <div id="profile-card" class="card profile">
   <div id="profile-picture">
     <div class="img-container">
-      <%= image_tag "test/profile-picture.jpg" %>
+      <%= image_tag "test/siluetaCorbata1.jpg" %>
     </div>
   </div>
   <h1><%= @name %></h1>
