--- a/src/alfred/app/assets/stylesheets/_login.scss.erb
+++ b/src/alfred/app/assets/stylesheets/_login.scss.erb
@@ -30,7 +30,7 @@
      z-index: -1;
      width: 39px;
      height: 36px;
-     background-image: url('<%= asset_path 'assets/logos/moove-it-logo.png' %>');;
+     background-image: image-url('logos/moove-it-logo.png');
      background-size: 40px;
      background-repeat: no-repeat;
  }
@@ -67,7 +67,7 @@ a {
     border: 1px solid #F67B28;
     font-size: 16px;
     font-weight: bold;
-    background-image: url('<%= asset_path 'assets/layouts/calendar-white.png' %>');
+    background-image: image-url('layouts/calendar-white.png');
     background-repeat: no-repeat;
     background-position: 10px 50%;
     background-size: 24px;
