--- a/src/alfred/app/views/layouts/_navigation.html.erb
+++ b/src/alfred/app/views/layouts/_navigation.html.erb
@@ -41,10 +41,10 @@
             </li>
           </ul>
 
-            <form class="navbar-form navbar-right search" role="search">
+            <form id="nav-search-form" class="navbar-form navbar-right search" role="search">
                 <button type="submit" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-search"></span></button>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" id="nav-search"  class="form-control" placeholder="Search">
                 </div>
             </form>
 
