--- a/src/alfred/app/views/layouts/application.html.erb
+++ b/src/alfred/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= csrf_meta_tags %>
 
   </head>
-  <body>
+  <body class="<%= controller.controller_name %>">
     <header>
       <%= render 'layouts/navigation' %>
     </header>
