--- a/src/alfred/app/views/milestones/show.html.erb
+++ b/src/alfred/app/views/milestones/show.html.erb
@@ -1,8 +1,21 @@
 <div class="container-fluid">
   <div class="row">
     <div class="card-col col-xs-7">
+
       <div id="milestone-info">
+        <div class="milestone-status <%= @milestone.status %>"></div>
+        <div class="left-pane">
+            <div class="milestone-icon"><%= image_tag @milestone.icon %></div>
+            <h2><%= @milestone.title %></h2>
+            <h3><%= @milestone.category.name %></h3>
+        </div>
+        <div class="right-pane">
+            <p><%= @milestone.description %></p>
+            <div class="calendar white right"><%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %></div>
+        </div>
+        <div class="clearfix"></div>
       </div>
+
     </div>
   </div>
 </div>
