--- a/app/views/people/_events_card.erb
+++ b/app/views/people/_events_card.erb
@@ -47,7 +47,14 @@
                 <div class="month-and-year"><%=monthname(e.due_date)%> <%=e.due_date.year%></div>
                 <h2><%=e.title%></h2>
                 <p><%=e.description%></p>
-              </div>
+                <p><%=t(e.status) %></p>
+                <p><%=
+                    if e.status != :done
+                      session[:return_to] ||= request.referer
+                      link_to t(:markdone), milestone_path(e, :milestone  => {:status => :done}), :method => :put
+                    end
+                %></p>
+              </div></p>
             </li>
           </ul>
       <% end %>
