--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="field">
       <%= f.label t('project_new_status') %><br>
-      <%= f.text_field :status %>
+      <%= f.select :status, options_for_select(Project.status_names_for_select).keys.to_a %>
     </div>
     <div class="field">
       <%= f.label t('project_new_technologies') %><br>
