--- a/app/assets/javascripts/search.js.erb
+++ b/app/assets/javascripts/search.js.erb
@@ -1,6 +1,6 @@
 
 // OJO! Esto es una solución temporal para permitir la navegación entre las diferentes
-// parates del sitio. Se integrará una solución más general.
+// partes del sitio. Se integrará una solución más general.
 
 Search = {};
 
