alfred 6 en paniales

--- a/app/views/people/_profile_card.erb
+++ b/app/views/people/_profile_card.erb
@@ -11,4 +11,6 @@
         <li><%= image_tag s.icon %></li>
     <% end %>
   </ul>
+  <br> <a href="/people/add_mentor" class="button">Agregar mentor</a>
+
 </div>
