--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="field">
       <%= f.label t('project_new_technologies') %><br>
-      <%= f.text_field :technologies %>
+      <%= f.select :technologies, Technology.all.collect(&:name), {prompt: "Select Technologies"}, {:multiple => true, :class => "input-lg"} %>
     </div>
     <div class="field">
       <%= f.label t('project_new_start_date') %><br>
