--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -3,7 +3,7 @@
     <div class="card-col col-xs-7">
 
       <div id="milestone-info">
-        <div class="milestone-status <%= @milestone.status %>"></div>
+        <%= milestone_status(@milestone) %>
         <div class="left-pane">
             <div class="milestone-icon"><%= image_tag @milestone.icon %></div>
             <h2><%= @milestone.title %></h2>
@@ -11,14 +11,7 @@
         </div>
         <div class="right-pane">
             <p><%= @milestone.description %></p>
-            <p><%=t(@milestone.status) %></p>
-            <p><%=
-                if @milestone.status != :done
-                  session[:return_to] ||= request.referer
-                  link_to t(:markdone), milestone_path(@milestone, :milestone  => {:status => :done}), :method => :put
-                end
-            %></p>
-            <div class="calendar white right"><%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %></div>
+            <div class="calendar white right"><%= l(@milestone.due_date, format: "%A, %d %B %Y").capitalize %></div>
         </div>
         <div class="clearfix"></div>
       </div>
