--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,38 @@
-Pagina de show project
+<p>
+  <label>
+    <%= t('project_name') %>
+  </label>
+  <%= @project.name %>
+</p>
+<p>
+  <label>
+    <%= t('project_client') %>
+  </label>
+  <%= @project.client %>
+</p>
+<p>
+  <label>
+    <%= t('project_status') %>
+  </label>
+  <%= @project.display_status %>
+</p>
+<p>
+  <label>
+    <%= t('project_start_date') %>
+  </label>
+  <%= @project.start_date %>
+</p>
+<p>
+  <label>
+    <%= t('project_end_date') %>
+  </label>
+  <%= @project.end_date %>
+</p>
+<p>
+    <label>
+    <%= t('project_technologies') %>
+    </label>
+    <% @project.technologies.each do |t| %>
+      <li><%= t.name %></li>
+    <% end %>
+</p>
