Se asocia tecnologias a proyectos --skip-ci

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
         <%= link_to t('edit'), edit_project_path(p) %>
       </td>
       <td>
-        <%= link_to t('delete'), p, method: :delete %>
+        <!--<%= link_to t('delete'), p, method: :delete %>-->
       </td>
     </tr>
   <% end %>
